--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "build": "npm run type-check && npm run clean && npm run tsup",
+    "build-fast": "npm run clean && npm run tsup",
     "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --cache",
     "lint:fix": "npm run lint -- --fix",
     "type-check": "tsc --noEmit",
