chore: fixed minor issue

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "scripts": {
     "dev": "npm run storybook",
     "start": "npm run dev",
-    "dev:watch": "pnpm --filter=./packages/* dev:watch",
-    "build": "pnpm --workspace-concurrency 1 --filter=./packages/config --filter=./packages/shared --filter=./packages/test-utils --filter=./packages/hooks --filter=./packages/icons --filter=./packages/components --filter=./packages/providers build",
+    "filter-package": "pnpm --workspace-concurrency 1 --filter=./packages/config --filter=./packages/shared --filter=./packages/test-utils --filter=./packages/hooks --filter=./packages/icons --filter=./packages/components --filter=./packages/providers",
+    "build": "pnpm filter-package build",
     "build-fast": "pnpm --filter=./packages/* build-fast",
-    "filter-package": "pnpm --filter=./packages/*",
+    "tsup": "pnpm filter-package tsup",
     "lint": "eslint ./packages --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --cache",
     "lint:fix": "pnpm lint --fix",
     "typedocs": "pnpm react:components typedocs",
@@ -110,10 +110,8 @@
     "@paalan/react-config": "workspace:*",
     "@paalan/react-hooks": "workspace:*",
     "@paalan/react-icons": "workspace:*",
-    "@paalan/react-layouts": "workspace:*",
     "@paalan/react-providers": "workspace:*",
     "@paalan/react-shared": "workspace:*",
-    "@paalan/react-styled": "workspace:*",
     "@paalan/react-test-utils": "workspace:*",
     "@storybook/addon-a11y": "^8.2.5",
     "@storybook/addon-coverage": "^1.0.4",
