--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -1,10 +1,4 @@
 {
-  "extends": ["../../tsconfig.base.json"],
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  },
-  "include": ["src", "../../@types"],
-  "exclude": ["dist", "node_modules"]
+  "extends": ["../../tsconfig.json"],
+  "include": ["src", "../../@types"]
 }
