--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -7,8 +7,7 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
-    "access": "public",
-    "directory": "dist"
+    "access": "public"
   },
   "author": {
     "name": "Paalamugan"
@@ -57,6 +56,7 @@
   "license": "ISC",
   "files": [
     "dist",
-    "tsconfig.json"
+    "tsconfig.json",
+    "package.json"
   ]
 }
