--- a/packages/icons/tsconfig.json
+++ b/packages/icons/tsconfig.json
@@ -1,9 +1,4 @@
 {
-  "extends": ["../../tsconfig.base.json"],
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  },
+  "extends": ["../../tsconfig.json"],
   "include": ["src"]
 }
