--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -11,6 +11,5 @@
   "linked": [],
   "access": "public",
   "baseBranch": "main",
-  "updateInternalDependencies": "patch",
-  "ignore": ["examples"]
+  "updateInternalDependencies": "patch"
 }
