--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next:enter": "changeset pre enter next",
     "next:exit": "changeset pre exit next",
     "version": "changeset version",
+    "release:local": "npx env-cmd -f .env -x \"pnpm release --otp $NPM_TOKEN\"",
     "release": "changeset publish",
     "version:dev": "changeset version --snapshot dev",
     "release:dev": "changeset publish --tag dev"
@@ -100,19 +101,22 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.22.15",
+    "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.7",
+    "@changesets/get-release-plan": "^4.0.3",
+    "@changesets/types": "^6.0.0",
     "@chromatic-com/storybook": "1",
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@commitlint/cz-commitlint": "^17.6.7",
     "@isaacs/cliui": "^8.0.2",
-    "@paalan/react-ui": "workspace:*",
     "@paalan/react-config": "workspace:*",
     "@paalan/react-hooks": "workspace:*",
     "@paalan/react-icons": "workspace:*",
     "@paalan/react-providers": "workspace:*",
     "@paalan/react-shared": "workspace:*",
     "@paalan/react-test-utils": "workspace:*",
+    "@paalan/react-ui": "workspace:*",
     "@storybook/addon-a11y": "^8.2.5",
     "@storybook/addon-coverage": "^1.0.4",
     "@storybook/addon-essentials": "^8.2.5",
@@ -148,6 +152,7 @@
     "commitizen": "^4.3.0",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
