--- a/packages/providers/package.json
+++ b/packages/providers/package.json
@@ -27,8 +27,7 @@
   "dependencies": {
     "@azure/msal-browser": "^3.5.0",
     "@azure/msal-react": "^2.0.7",
-    "axios": "^1.6.0",
-    "next-themes": "^0.3.0"
+    "axios": "^1.6.0"
   },
   "peerDependencies": {
     "react": ">=16.18.x",
