--- a/packages/providers/package.json
+++ b/packages/providers/package.json
@@ -7,7 +7,8 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "author": {
     "name": "Paalamugan"
@@ -35,35 +36,30 @@
     "react-router-dom": ">=6.x.x"
   },
   "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    },
     "./FormatIntlProvider": {
-      "import": "./dist/FormatIntlProvider/index.js",
-      "require": "./dist/FormatIntlProvider/index.cjs",
-      "types": "./dist/FormatIntlProvider/index.d.ts"
+      "import": "./FormatIntlProvider/index.js",
+      "require": "./FormatIntlProvider/index.cjs",
+      "types": "./FormatIntlProvider/index.d.ts"
     },
     "./MsalAuthProvider": {
-      "import": "./dist/MsalAuthProvider/index.js",
-      "require": "./dist/MsalAuthProvider/index.cjs",
-      "types": "./dist/MsalAuthProvider/index.d.ts"
+      "import": "./MsalAuthProvider/index.js",
+      "require": "./MsalAuthProvider/index.cjs",
+      "types": "./MsalAuthProvider/index.d.ts"
     },
     "./ThemeProvider": {
-      "import": "./dist/ThemeProvider/index.js",
-      "require": "./dist/ThemeProvider/index.cjs",
-      "types": "./dist/ThemeProvider/index.d.ts"
-    },
-    "./ToastProvider": {
-      "import": "./dist/ToastProvider/index.js",
-      "require": "./dist/ToastProvider/index.cjs",
-      "types": "./dist/ToastProvider/index.d.ts"
+      "import": "./ThemeProvider/index.js",
+      "require": "./ThemeProvider/index.cjs",
+      "types": "./ThemeProvider/index.d.ts"
     },
     "./NextThemeProvider": {
-      "import": "./dist/NextThemeProvider/index.js",
-      "require": "./dist/NextThemeProvider/index.cjs",
-      "types": "./dist/NextThemeProvider/index.d.ts"
+      "import": "./NextThemeProvider/index.js",
+      "require": "./NextThemeProvider/index.cjs",
+      "types": "./NextThemeProvider/index.d.ts"
+    },
+    "./ToastProvider": {
+      "import": "./ToastProvider/index.js",
+      "require": "./ToastProvider/index.cjs",
+      "types": "./ToastProvider/index.d.ts"
     }
   },
   "engines": {
