chore: update package.json

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next:exit": "changeset pre exit next",
     "version": "changeset version",
     "release": "changeset publish",
+    "release:locally": "dotenv -c -- pnpm release",
     "version:dev": "changeset version --snapshot dev",
     "release:dev": "pnpm release --tag dev",
     "slack": "tsx scripts/slack.ts",
@@ -154,8 +155,7 @@
     "commitizen": "^4.3.0",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5",
-    "env-cmd": "^10.1.0",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
