--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.0",
   "description": "React UI icons for Paalan UI",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
@@ -23,7 +23,8 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,md,mdx}\" --cache",
     "tsup": "tsup",
     "tsup:watch": "tsup --watch",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "build:types": "tsc -p ./tsconfig.build.json"
   },
   "peerDependencies": {
     "react": ">=16.18.x",
@@ -34,10 +35,12 @@
   },
   "exports": {
     ".": {
+      "source": "./src/index.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "repository": {
     "type": "git",
