--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -12,7 +12,7 @@
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
-    // "customConditions": ["source"],
+    "customConditions": ["source"],
     "resolveJsonModule": true,
     "isolatedModules": true,
     // JSX
