--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -63,6 +63,7 @@
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.17.0",
     "recharts": "^2.12.7",
+    "vaul": "^0.9.1",
     "zod": "^3.23.6"
   },
   "peerDependencies": {
