--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "next-themes": "^0.3.0",
     "react-day-picker": "^8.8.2",
     "react-error-boundary": "^4.0.13",
+    "react-router-dom": "^6.17.0",
     "react-hook-form": "^7.46.1",
     "tailwind-merge": "^2.4.0",
     "zen-observable-ts": "^1.1.0",
@@ -211,17 +212,13 @@
     "url": "https://github.com/paalamugan/paalan-react-shadcn-ui/issues"
   },
   "homepage": "https://github.com/paalamugan/paalan-react-shadcn-ui#readme",
-  "files": [
-    "dist",
-    "tsconfig.json"
-  ],
   "license": "ISC",
   "config": {
     "commitizen": {
       "path": "@commitlint/cz-commitlint"
     }
   },
-  "packageManager": "pnpm@9.6.0",
+  "packageManager": "pnpm@9.8.0",
   "engines": {
     "node": ">=20",
     "pnpm": ">=9"
