--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "axios": "^1.6.2",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "zod": "^3.23.8"
   },
   "peerDependencies": {
     "react": ">=16.18.x",
