chore: Add word-break class to handle long words in Stepper component

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "preview": "npm run storybook:build && serve storybook-static",
     "preview:docs": "npm run storybook:build:docs && serve storybook-static",
     "commit": "cz",
-    "validate": "npm run build && npm run storybook:build && npm run test",
+    "validate": "pnpm type-check && pnpm lint",
     "print": "sls print",
     "deploy": "npm run storybook:build && sls deploy",
     "deploy:local": "cross-env AWS_SDK_LOAD_CONFIG=1 npm run deploy",
@@ -84,6 +84,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@tanstack/react-table": "^8.9.9",
+    "@testing-library/user-event": "^14.5.2",
     "@zag-js/element-size": "^0.24.0",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
@@ -97,8 +98,8 @@
     "next-themes": "^0.3.0",
     "react-day-picker": "^8.8.2",
     "react-error-boundary": "^4.0.13",
-    "react-router-dom": "^6.17.0",
     "react-hook-form": "^7.46.1",
+    "react-router-dom": "^6.17.0",
     "tailwind-merge": "^2.4.0",
     "zen-observable-ts": "^1.1.0",
     "zod": "^3.23.8"
@@ -121,23 +122,23 @@
     "@paalan/react-shared": "workspace:*",
     "@paalan/react-test-utils": "workspace:*",
     "@paalan/react-ui": "workspace:*",
-    "@storybook/addon-a11y": "^8.2.5",
+    "@storybook/addon-a11y": "^7.6.20",
     "@storybook/addon-coverage": "^1.0.4",
-    "@storybook/addon-essentials": "^8.2.5",
-    "@storybook/addon-interactions": "^8.2.5",
-    "@storybook/addon-links": "^8.2.5",
-    "@storybook/addon-mdx-gfm": "8.2.5",
-    "@storybook/addon-storysource": "^8.2.5",
-    "@storybook/addon-themes": "^8.2.5",
-    "@storybook/blocks": "^8.2.5",
-    "@storybook/core-events": "^8.2.5",
-    "@storybook/manager-api": "^8.2.5",
-    "@storybook/preview-api": "^8.2.5",
-    "@storybook/react": "^8.2.5",
-    "@storybook/react-vite": "^8.2.5",
-    "@storybook/test": "8.2.5",
+    "@storybook/addon-essentials": "^7.6.20",
+    "@storybook/addon-interactions": "^7.6.20",
+    "@storybook/addon-links": "^7.6.20",
+    "@storybook/addon-mdx-gfm": "7.6.20",
+    "@storybook/addon-storysource": "^7.6.20",
+    "@storybook/addon-themes": "^7.6.20",
+    "@storybook/blocks": "^7.6.20",
+    "@storybook/core-events": "^7.6.20",
+    "@storybook/manager-api": "^7.6.20",
+    "@storybook/preview-api": "^7.6.20",
+    "@storybook/react": "^7.6.20",
+    "@storybook/react-vite": "^7.6.20",
+    "@storybook/test": "7.6.20",
     "@storybook/test-runner": "^0.19.1",
-    "@storybook/theming": "^8.2.5",
+    "@storybook/theming": "^7.6.20",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
@@ -186,8 +187,8 @@
     "serverless-cloudfront-invalidate": "^1.12.2",
     "serverless-plugin-split-stacks": "^1.13.0",
     "serverless-s3-sync": "^3.2.0",
-    "storybook": "^8.2.5",
-    "storybook-addon-react-router-v6": "^2.0.9",
+    "storybook": "^7.6.20",
+    "storybook-addon-react-router-v6": "^2.0.15",
     "storybook-addon-tw-dm-toggle": "^7.0.19",
     "tailwindcss": "^3.4.6",
     "ts-jest": "^29.1.1",
@@ -218,7 +219,7 @@
       "path": "@commitlint/cz-commitlint"
     }
   },
-  "packageManager": "pnpm@9.8.0",
+  "packageManager": "pnpm@9.9.0",
   "engines": {
     "node": ">=20",
     "pnpm": ">=9"
