--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -58,10 +58,12 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.417.0",
     "react-day-picker": "^8.8.2",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.51.5",
+    "react-icons": "^5.3.0",
     "recharts": "^2.12.7",
     "vaul": "^0.9.1",
     "zod": "^3.23.6"
